<resources>
    <string name="app_name">Fooneeds</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="text_forgotpassword">Please enter your email address. <br>You will receive a link to create a new password <br>via email.</br></br></string>
    <string name="check_email">Check Your Email</string>
    <string name="text_reset_email">Reset link has been sent to farrel@gmail.com</string>
    <string name="back_to_login">Back To Login</string>
    <string name="edit_name">Edit Name</string>
    <string name="text_edit_name">Name</string>
    <string name="edit_user_name">Johanes Elian</string>
    <string name="text_confirm">Confirm</string>
    <string name="edit_email">Edit Email</string>
    <string name="text_edit_email">Email</string>
    <string name="edit_user_email">farrel@gmail.com</string>
    <string name="edit_phone_number">Edit Phone Number</string>
    <string name="text_edit_phone_number">Phone Number</string>
    <string name="edit_user_phone_number">082233442341</string>
    <string name="edit_gender">Edit Gender</string>
    <string name="text_edit_gender">Gender</string>
    <string name="edit_user_gender">Male</string>
    <string name="change_password">Change Password</string>
    <string name="text_edit_current_password">Current Password</string>
    <string name="text_new_password">New Password</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="text_reset_password">Please enter your new password</string>
    <string name="new_address">New Address</string>
    <string name="text_street">Street</string>
    <string name="text_city">City</string>
    <string name="text_change_password">Change Password</string>
    <string name="explore">Explore</string>
    <string name="dogs">Dogs</string>
    <string name="cats">Cats</string>
    <string name="most_popular">Most Popular</string>
    <string name="see_more">See More</string>
    <string name="daily_discover">Daily Discover</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="text_edit_address">Address</string>
    <string name="tap_to_change">Tap to Change</string>
    <string name="text_nama_produk">Pedigree 400gr</string>
    <string name="dog">Dog</string>
    <string name="text_detail_product">The PEDIGREE® line of nutritionally balanced food helps ensure your dog can live their happiest and healthiest life. Our High Protein recipe is made with real red meat, and 25% more protein than Adult Complete Nutrition . It’s always 100% complete and balanced with no added sugar, no artificial flavors, and no high fructose corn syrup. Let PEDIGREE® nourish your dog’s skin and coat with essential  fatty acids and minerals, and help clean your dog’s teeth with unique crunchy kibble. Because with all the goodness that dogs share with us, we all want to do what\'s best for them.</string>
    <string name="stock">Stock : 18pcs</string>
    <string name="price">Rp.18.000</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="articles">Article</string>
    <string name="save">Saved</string>
    <string name="all_items">All Items</string>
    <string name="thankyou">Thank You!</string>
    <string name="completed">Your order is completed.</string>
    <string name="payment">Payment Instructions</string>
    <string name="va">Virtual Account Number</string>
    <string name="va_number">500012345678</string>
    <string name="TP">Total Payment</string>
    <string name="TP_Amount">Rp.70.000</string>
    <string name="instructions">
        1. Select Transfer from Mobile Banking Application or ATM. <br></br>
        2. Select Virtual Account <br></br>
        3. Input Virtual Account Number <br></br>
        4. Input the amount of transaction <br></br>
        5. Click Send
    </string>
    <string name="top_sales">Top Sales</string>
    <string name="latest">Latest</string>
    <string name="price_tab">Price</string>
    <string name="empty_cart">Your shopping cart is empty</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="choose_bank">Choose Bank</string>
    <string name="BNI">BNI</string>
    <string name="BCA">BCA</string>
    <string name="MANDIRI">MANDIRI</string>
    <string name="BRI">BRI</string>
    <string name="OCBCNISP">OCBC NISP</string>
    <string name="checkout">Checkout</string>
    <string name="payment_method">Payment Method</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping">Shipping</string>
    <string name="total">Total</string>
    <string name="error_login">Please fill email and password</string>
    <string name="text_readMore">Read More</string>
    <string name="profile">My Profile</string>
    <string name="logout">Log out</string>
    <string name="edit_address">Edit Address</string>
    <string name="text_qty">Qty</string>
    <string name="text_minus">-</string>
    <string name="text_plus">+</string>
    <string name="text_add">Add</string>
    <string name="text_item_added">Item Added!</string>
    <string name="error_login2">Password and Confirm Password don\'t match</string>
    <string name="text_ship">Shipping to</string>
    <string name="text_cod">Cash On Delivery</string>
    <string name="text_recent">Recent searches</string>
    <string name="text_popular_product">Popular product</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>