<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_button_top"
            android:layout_marginLeft="@dimen/margin_start_button_top"
            android:layout_marginTop="@dimen/margin_top_button_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/backbutton" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="40dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:text="@string/text_nama_produk" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_weight="1"
                android:text="@string/dog" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/loveplain" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_detail_product" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/stock"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:text="@string/price"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_reset_link2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_input_button"
            android:layout_marginLeft="@dimen/margin_input_left_right_bottom"
            android:layout_marginTop="50dp"
            android:layout_marginRight="@dimen/margin_input_left_right_bottom"
            android:layout_marginBottom="@dimen/margin_input_left_right_bottom"
            android:fontFamily="@font/montserrat"
            android:text="@string/add_to_cart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_button"
            android:textStyle="bold"
            app:backgroundTint="@color/uid_yellow"
            app:cornerRadius="@dimen/radius_button" />

    </LinearLayout>
</ScrollView>