<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/back_button_size"
        android:layout_height="@dimen/back_button_size"
        android:layout_marginLeft="@dimen/back_margin_left"
        android:layout_marginTop="@dimen/back_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backbutton" />

    <TextView
        android:id="@+id/tv_checkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_title_margin"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/checkout"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_title_margin"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tv_checkout">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_height"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/input_margin"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:gravity="start"
            android:text="@string/text_edit_phone_number"
            android:textColor="@color/black" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_height"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/input_margin"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:gravity="start"
            android:text="@string/payment_method"
            android:textColor="@color/black" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="444dp"
        android:layout_height="225dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rectangle"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView36"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/subtotal" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shipping" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total" />

        <Button
            android:id="@+id/btn_reset_link"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="@dimen/input_margin"
            android:layout_marginRight="@dimen/input_margin"
            android:layout_marginBottom="@dimen/input_margin"
            android:fontFamily="@font/montserrat"
            android:text="@string/text_confirm"
            android:textAllCaps="false"
            android:textColor="@color/uid_yellow"
            android:textSize="@dimen/button_size"
            android:textStyle="bold"
            app:backgroundTint="@color/black"
            app:cornerRadius="@dimen/button_radius" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>