<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_bankTransfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_no_button"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/bank_transfer"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/size_title_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_title_to_layout"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bankTransfer">

        <TextView
            android:id="@+id/tv_chooseBank"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_text"
            android:layout_marginStart="@dimen/margin_input_left_right_bottom"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat"
            android:gravity="start"
            android:text="@string/choose_bank"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/btnBNI"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_input_button"
            android:layout_marginLeft="@dimen/margin_input_left_right_bottom"
            android:layout_marginRight="@dimen/margin_input_left_right_bottom"
            android:layout_marginBottom="@dimen/margin_content"
            android:background="@drawable/custom_bank"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:inputType="none"
            android:paddingStart="@dimen/padding_start"
            android:paddingEnd="@dimen/padding_start"
            android:text="@string/BNI"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/btnBCA"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_input_button"
            android:layout_marginLeft="@dimen/margin_input_left_right_bottom"
            android:layout_marginRight="@dimen/margin_input_left_right_bottom"
            android:layout_marginBottom="@dimen/margin_content"
            android:layout_weight="1"
            android:background="@drawable/custom_bank"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:inputType="none"
            android:paddingStart="@dimen/padding_start"
            android:paddingEnd="@dimen/padding_start"
            android:text="@string/BCA"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/btnMandiri"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_input_button"
            android:layout_marginLeft="@dimen/margin_input_left_right_bottom"
            android:layout_marginRight="@dimen/margin_input_left_right_bottom"
            android:layout_marginBottom="@dimen/margin_content"
            android:layout_weight="1"
            android:background="@drawable/custom_bank"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:inputType="none"
            android:paddingStart="@dimen/padding_start"
            android:paddingEnd="@dimen/padding_start"
            android:text="@string/MANDIRI"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/btnBRI"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_input_button"
            android:layout_marginLeft="@dimen/margin_input_left_right_bottom"
            android:layout_marginRight="@dimen/margin_input_left_right_bottom"
            android:layout_marginBottom="@dimen/margin_content"
            android:layout_weight="1"
            android:background="@drawable/custom_bank"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:inputType="none"
            android:paddingStart="@dimen/padding_start"
            android:paddingEnd="@dimen/padding_start"
            android:text="@string/BRI"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/btnOCBC"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_input_button"
            android:layout_marginLeft="@dimen/margin_input_left_right_bottom"
            android:layout_marginRight="@dimen/margin_input_left_right_bottom"
            android:layout_marginBottom="@dimen/margin_input_left_right_bottom"
            android:layout_weight="1"
            android:background="@drawable/custom_bank"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:inputType="none"
            android:paddingStart="@dimen/padding_start"
            android:paddingEnd="@dimen/padding_start"
            android:text="@string/OCBCNISP"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnConfirmBank"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_input_button"
            android:layout_marginLeft="@dimen/margin_input_left_right_bottom"
            android:layout_marginRight="@dimen/margin_input_left_right_bottom"
            android:layout_marginBottom="@dimen/margin_input_left_right_bottom"
            android:fontFamily="@font/montserrat"
            android:text="@string/text_confirm"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_button"
            android:textStyle="bold"
            app:backgroundTint="@color/uid_yellow"
            app:cornerRadius="@dimen/radius_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>